# Profile-Guided-Verified-LLM-Optimization

./: .gitignore  README.md  pyproject.toml
configs/: architectures.yaml  experiments.default.yaml  polybench.default.yaml  prompts.default.yaml  verify.default.yaml
data/candidates/: README.md
data/kernels/: README.md
examples/kernels/dot_product/: input.txt  reference.c
examples/kernels/vector_add/: candidate_forbidden_alignment.c  candidate_same.c  input.txt
jobs/: collect_ir_asm_missing_gemver_syrk.sbatch  collect_ir_asm_success6.sbatch  probe_cpu_nodes.sbatch  probe_gpu_cpu_nodes.sbatch  resume_exp30_skx_openai_claude.sbatch  run_2mm_hsw_extra_candidates_elm11.sbatch  run_cross_arch_success6.sbatch  run_cross_arch_successes_gpu.sbatch  run_cross_arch_vector_reports.sbatch  run_exp30_skx_gemini.sbatch  run_target_arch_generated_candidates.sbatch  taskset_doitgen_openai_skx.sbatch
runs/: artifact_manifest.txt
scripts/: generate_llm_candidate_once.py  generate_prompts.py  inspect_polybench.py  prepare_polybench.py  run_benchmark.py  run_exp30_skx_gemini.sh  run_exp30_skx_openai_claude.sh  run_polybench_one.py  run_smoke_pipeline.py  summarize_results.py  verify_candidate.py
src/vallmopt/: __init__.py  arch.py  config.py
src/vallmopt/analysis/: __init__.py  summarize.py  transform_labels.py
src/vallmopt/benchmark/: __init__.py  hyperfine.py  perf.py  runner.py  stats.py
tests/: test_arch_config.py  test_logging_schema.py  test_polybench_integration.py  test_prompt_builder.py  test_smoke_pipeline.py  test_stats.py  test_verify_pipeline.py
(+19 files in other folders)
