[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vallmopt"
version = "0.1.0"
description = "Infrastructure for verified architecture-conditioned LLM optimization of C kernels."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Verified Architecture-Conditioned LLM Optimization Contributors" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
